@@ -1,7 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX mirrorbrain.conf.dist 283 RMD160 75e1d9b143df9d65b280ae6033d5421c03f64720 SHA1 fe724636efcfc6be74a583d159925ba99670d874 SHA256 f0128c5596b37b92b08b1ddde850f7aa68a29cccee7265bfa4d0beb2beb1c142
+DIST mirrorbrain-2.11.3.tar.gz 356242 RMD160 138bad4b52622e93069640414fee3fee365e135f SHA1 bb9f02aca01d6b1494f6067dd2bff1125c092e7d SHA256 cf18c3863f064463413744c4a537b3180bbbfbfd27d69a313236498a898af03e
 DIST mirrorbrain-2.8.1.tar.gz 308537 RMD160 5f3a1dc08c005e7151b7bba9030e08e1b18ed39b SHA1 929c9bd427b9d5d9b9aaf9bc256a20d08516ea27 SHA256 999262154d672e8c2339cbf67ec5ed9cf654a5767473893c91894b742c8f6bf5
 DIST mirrorbrain-2.8.tar.gz 307722 RMD160 83fccfc8bff5a9c07d38407b44681135c3741bb9 SHA1 79470b1c46b6fb861001e7ff9c903f41948eb8e8 SHA256 204ea49097da5502443d7f8a5f34181667486de6c0be227da7e4524cba146125
+EBUILD mirrorbrain-2.11.3.ebuild 1718 RMD160 e301499efb6443c91bbeeb1bc1dc9c637f5efe07 SHA1 a83f7eb9591bfc01649e17d80d9724cece253bbe SHA256 d2489c47447f93879b1656112d72e7237a0a0e107089322ecd812956b4049693
 EBUILD mirrorbrain-2.8.1.ebuild 1666 RMD160 7eb8b45f6bb8aa6fcceea51a171cb51b34118f76 SHA1 fbe58c7ae80b7997e82bd8b81e284b59a33bc517 SHA256 ab68815f9710cadab95d9e609067ace4389af7332018a7cd91b480d50ee74ab6
 EBUILD mirrorbrain-2.8.ebuild 1666 RMD160 7eb8b45f6bb8aa6fcceea51a171cb51b34118f76 SHA1 fbe58c7ae80b7997e82bd8b81e284b59a33bc517 SHA256 ab68815f9710cadab95d9e609067ace4389af7332018a7cd91b480d50ee74ab6
 EBUILD mirrorbrain-9999.ebuild 1710 RMD160 c8a928b832259763169073bde30d9b3debfc6ee9 SHA1 26936a0e7b859a712fa814d3ab9e8b6d6642b2e9 SHA256 b42ec2f84bf698adaf8a7a82250a71ceb17fdcbe8b624ac60e3ffa3618af79b5
-MISC ChangeLog 518 RMD160 03f882377ec176a397cdae9357e3674275f0758c SHA1 fb1944804ed5fa9aab505d2258e42b2c95bd6418 SHA256 06f47ee80a8b71bc844da0461fcd0e3a0c89f5742657877d5047e9904ed05283
+MISC ChangeLog 684 RMD160 b19fe5f184e8c13d38c09643d4875c549178d805 SHA1 1e71151c72721e816915b51bc548f169236a66ae SHA256 9f1a8d34facba936c11a1bad5d31d6076936d36563014ffa1359ee2ba265dc87
+MISC metadata.xml 572 RMD160 5b7aa04b3fb08e0fbb6a09cc9afff20d71665fc7 SHA1 2eb146a7c8554a0559c2e034ee6f14efe357e65e SHA256 bd97a6cb6d478f88d4b367bb7f5dd8de0f1d53b7a4dcca1bc484c9fabdb25308
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFLKeA/QW+hXSf0t0IRAsEVAJ94B1L2KXKMIsQHXw04+wmHM8NxSACfTqBR
+Tfp7F7l0FIUcZOQUJdWkIr8=
+=ECPT
+-----END PGP SIGNATURE-----
